--- a/index.html
+++ b/index.html
@@ -8,10 +8,54 @@
     <link rel="stylesheet" href="css/baguetteBox.min.css"> 
 </head>
 <body>
- 
-    
+ <nav>
+    <input type="search" name="search" id="search" placeholder="Search">
+ </nav>
+ <main>
 
+    <div class="gallery">
+        <a href="photos/thumbnails/01.jpg" data-caption="An open plain">
+            <img src="photos/thumbnails/01.jpg" alt="First image">
+        </a>
+        <a href="photos/thumbnails/02.jpg" data-caption="The open sea">
+            <img src="photos/thumbnails/01.jpg" alt="Second image">
+        </a>
+        <a href="photos/thumbnails/03.jpg" data-caption="Grassland">
+            <img src="photos/thumbnails/03.jpg" alt="Third image">
+        </a>
+        <a href="photos/thumbnails/04.jpg" data-caption="Wow its ice">
+            <img src="photos/thumbnails/04.jpg" alt="Fourth image">
+        </a>
+        <a href="photos/thumbnails/05.jpg" data-caption="Tall rocks">
+            <img src="photos/thumbnails/05.jpg" alt="Fifth image">
+        </a>
+        <a href="photos/thumbnails/06.jpg" data-caption="A forest with unique trees">
+            <img src="photos/thumbnails/06.jpg" alt="Sixth image">
+        </a>
+        <a href="photos/thumbnails/07.jpg" data-caption="Another forest">
+            <img src="photos/thumbnails/07.jpg" alt="Seventh image">
+        </a>
+        <a href="photos/thumbnails/08.jpg" data-caption="A sandy beach">
+            <img src="photos/thumbnails/08.jpg" alt="Eight image">
+        </a>
+        <a href="photos/thumbnails/09.jpg" data-caption="A long winding path">
+            <img src="photos/thumbnails/09.jpg" alt="Ninth image">
+        </a>
+        <a href="photos/thumbnails/10.jpg" data-caption="Sunset">
+            <img src="photos/thumbnails/10.jpg" alt="Tenth image">
+        </a>
+        <a href="photos/thumbnails/11.jpg" data-caption="Another winding path">
+            <img src="photos/thumbnails/11.jpg" alt="Eleventh image">
+        </a>
+        <a href="photos/thumbnails/12.jpg" data-caption="An grassy plain">
+            <img src="photos/thumbnails/12.jpg" alt="Twelvth image">
+        </a>
+    </div>
+        
+ </main>
 
-    <script src="js/baguetteBox.min.js" async></script> 
+    <script src="js/baguetteBox.min.js" async></script>
+    <script src="js/searchFilter.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
