--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Photo Gallery</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/baguetteBox.min.css"> 
 </head>
@@ -18,7 +18,7 @@
             <img src="photos/thumbnails/01.jpg" alt="Hay Bales">
         </a>
         <a href="photos/thumbnails/02.jpg" data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here.">
-            <img src="photos/thumbnails/01.jpg" alt="Lake">
+            <img src="photos/thumbnails/02.jpg" alt="Lake">
         </a>
         <a href="photos/thumbnails/03.jpg" data-caption="Grassland">
             <img src="photos/thumbnails/03.jpg" alt="Canyon">
